--- a/sass/home.scss
+++ b/sass/home.scss
@@ -106,7 +106,6 @@
       cursor: pointer;
       padding: 5px;
       border-radius: 3px;
-      transition: .2s ease all;
       position: relative;
       overflow: hidden;
       &:before {
