--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,26 +2,6 @@ $blue : #59ABE3;
 $red  : #EF4836;
 $grey : #666666;
 $gold : #E87E04;
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Raleway', sans-serif;
-  color: $grey;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
-  text-shadow: rgba(0,0,0,.01) 0 0 1px;
-}
-
-a, a:link, a:visited, a:active {
-  color: $blue;
-}
-
-a:hover {
-  color: darken($blue, 10%);
-  text-decoration: none;
-}
 .overlay-footer {
   background: rgba(0,0,0,.5);
   width: 100%;
@@ -179,7 +159,6 @@ a:hover {
       cursor: pointer;
       padding: 5px;
       border-radius: 3px;
-      transition: .2s ease all;
       position: relative;
       overflow: hidden;
       &:before {
@@ -326,4 +305,29 @@ a:hover {
     width: 250px;
     height: auto;
   }
+}
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Raleway', sans-serif;
+  color: $grey;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
+  text-shadow: rgba(0,0,0,.01) 0 0 1px;
+}
+
+a, a:link, a:visited, a:active {
+  color: $blue;
+}
+
+a:hover {
+  color: darken($blue, 10%);
+  text-decoration: none;
+}
+
+.recent-item {
+    /*I removed "transform 0.5s" and "!important"*/
+    transition: opacity 0.5s, background-color 0.25s linear, border-color 0.25s linear;
 }
